[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/images/plant 5.png" type="Texture" id=1]
[ext_resource path="res://assets/images/plant 3.png" type="Texture" id=2]
[ext_resource path="res://assets/images/plant 4.png" type="Texture" id=3]
[ext_resource path="res://scenes/RigidBody2D.gd" type="Script" id=4]
[ext_resource path="res://assets/images/aquarium background.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/bg_music.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0000.png" type="Texture" id=7]
[ext_resource path="res://assets/images/tank floor 1.png" type="Texture" id=8]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0001.png" type="Texture" id=9]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0006.png" type="Texture" id=10]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0007.png" type="Texture" id=11]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0004.png" type="Texture" id=12]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0009.png" type="Texture" id=13]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0002.png" type="Texture" id=14]
[ext_resource path="res://assets/images/plant 2.png" type="Texture" id=15]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0005.png" type="Texture" id=16]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0008.png" type="Texture" id=17]
[ext_resource path="res://assets/images/sea_monkey/Timeline 1_0003.png" type="Texture" id=18]
[ext_resource path="res://assets/images/aquarium background 2.png" type="Texture" id=19]
[ext_resource path="res://scenes/Game.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 13 ) ],
"loop": true,
"name": "display",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37, 66.125 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
uniform float speed = 2.0;
uniform float dis = 30.0;

void vertex() {
	VERTEX.x += sin(TIME * speed) * dis * (UV.y - 1.0);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/speed = 2.0
shader_param/dis = 30.0

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
uniform float speed = 2.5;
uniform float dis = 50.0;

void vertex() {
	VERTEX.x += sin(TIME * speed) * dis * (UV.y - 1.0);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 7 )
shader_param/speed = 2.5
shader_param/dis = 50.0

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;
uniform float speed = 1.0;
uniform float dis = 50.0;

void vertex() {
	VERTEX.x += sin(TIME * speed) * dis * (UV.y - 1.0);
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/speed = 1.0
shader_param/dis = 50.0

[node name="Tank" type="Node2D"]
script = ExtResource( 20 )

[node name="Sea" type="Sprite" parent="."]
position = Vector2( 540, 960 )
texture = ExtResource( 5 )

[node name="TankFloor1" type="Sprite" parent="Sea"]
texture = ExtResource( 8 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 528, 852 )
mode = 2
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="RigidBody2D"]
position = Vector2( -1, -6 )
scale = Vector2( 0.201029, 0.212291 )
frames = SubResource( 1 )
animation = "display"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( -2, -5 )
shape = SubResource( 2 )

[node name="SwimTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Plant2" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 246, 1479 )
texture = ExtResource( 15 )

[node name="Plant3" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 539, 1639 )
texture = ExtResource( 2 )

[node name="Plant4" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 712, 1498 )
texture = ExtResource( 3 )

[node name="Plant5" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 957, 1238 )
texture = ExtResource( 1 )

[node name="RigidBody2D2" type="RigidBody2D" parent="."]
position = Vector2( 652, 1213 )
mode = 2
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="RigidBody2D2"]
position = Vector2( -1, -6 )
scale = Vector2( 0.201029, 0.212291 )
frames = SubResource( 1 )
animation = "display"
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
position = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="ShopButton" type="TextureButton" parent="."]
margin_right = 328.0
margin_bottom = 193.0
texture_normal = ExtResource( 19 )
expand = true

[node name="InventoryButton" type="TextureButton" parent="."]
margin_left = 752.0
margin_right = 1080.0
margin_bottom = 193.0
texture_normal = ExtResource( 19 )
expand = true

[node name="TankMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -21.124

[connection signal="timeout" from="SwimTimer" to="." method="_on_SwimTimer_timeout"]
[connection signal="timeout" from="SwimTimer" to="RigidBody2D" method="_on_SwimTimer_timeout"]
[connection signal="timeout" from="SwimTimer" to="RigidBody2D2" method="_on_SwimTimer_timeout"]
[connection signal="pressed" from="ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_InventoryButton_pressed"]
